EXTRA_DIST = api1.skb api10.skb api11.skb api12.skb api13.skb	\
  api14.skb api15.skb api16.skb api17.skb api18.skb		\
  api19.skb api2.skb api20-html.skb api20-lout.skb api3.skb	\
  api4.skb api5.skb api6.skb api7.skb api8.skb			\
  api9.skb bib1.sbib bib2.skb bib3.skb bib4.skb			\
  bib5.skb bib6.skb eq1.skb eq2.skb index1.skb			\
  index2.skb index3.skb links1.skb links2.skb pie1.skb pie2.skb	\
  prgm1.skb prgm2.skb prgm3.skb slides.skb			\
  start1.skb start2.skb start3.skb start4.skb start5.skb

## arch-tag: 9614a784-cac2-4399-bd61-18c9172f48a8
