guilemoduledir = $(GUILE_SITE)/skribilo
dist_guilemodule_DATA = biblio.scm color.scm config.scm			\
                        debug.scm engine.scm evaluator.scm		\
		        lib.scm module.scm output.scm prog.scm		\
		        reader.scm resolve.scm runtime.scm		\
			source.scm types.scm vars.scm verify.scm	\
			writer.scm

SUBDIRS = reader engine package skribe coloring
