dist_guilemodule_DATA = biblio.scm color.scm config.scm		\
                        debug.scm engine.scm evaluator.scm	\
			index.scm lib.scm module.scm		\
		        output.scm prog.scm			\
		        reader.scm resolve.scm			\
			source.scm parameters.scm verify.scm	\
			writer.scm ast.scm location.scm		\
			condition.scm sui.scm

SUBDIRS = utils reader engine package source biblio

include $(top_srcdir)/guile-lint.am
