guilemoduledir = $(GUILE_SITE)/skribilo/package
dist_guilemodule_DATA = acmproc.scm french.scm jfp.scm letter.scm	\
			lncs.scm scribe.scm sigplan.scm			\
			slide.scm web-article.scm web-book.scm		\
			eq.scm pie.scm base.scm diff.scm		\
			html-navtabs.scm

SUBDIRS = slide eq pie

include $(top_srcdir)/guile-lint.am
