moduledir = $(guilemoduledir)/skribilo/package
dist_module_DATA =      acmproc.scm french.scm jfp.scm letter.scm	\
			lncs.scm scribe.scm sigplan.scm			\
			slide.scm web-article.scm web-book.scm		\
			eq.scm pie.scm base.scm diff.scm		\
			html-navtabs.scm web-book2.scm

SUBDIRS = slide eq pie

include $(top_srcdir)/guile-lint.am
